[package]
name = "gravity"
version = "0.1.0"
edition = "2021"

# -- Library settings --
[lib]
name = "gravity"
path = "src/lib.rs"

# -- Binary settings --
[[bin]]
name = "gravity"
path = "src/main.rs"
required-features = ["bin"]


[features]
default = ["bin"]
bin = ["graphics", "egui"]

# -- Shared dependencies (for lib and bin) --
[dependencies]
lin_alg = { path = "../../lin_alg" }

# -- Optional dependencies (bin-only) --
[dependencies.graphics]
path = "../../graphics"
optional = true

[dependencies.egui]
version = "0.31.0"
optional = true